<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.education.rajneesh.jrec.fab">


<FrameLayout
    android:layout_width="match_parent"
android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_gravity="center_vertical"
    android:layout_height="wrap_content">




<ScrollView
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/contactsurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
android:background="#fff"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="#fff"
                android:fontFamily="sans-serif-condensed"
                android:text="CONTACT US"
                android:textColor="#c2c2c2"
                android:textSize="40sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-condensed"
                android:foreground="@drawable/shape9"
                android:hint="Name"
                android:onClick="name"
                android:padding="8dp"
android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-condensed"
                android:foreground="@drawable/shape9"
                android:hint="Mobile Number"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-condensed"
                android:foreground="@drawable/shape9"
                android:textColor="#000"
                android:textColorHint="#000"
                android:hint="Address"
                android:padding="8dp"
                android:textSize="15sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"

                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed"
                android:foreground="@drawable/shape9"
                android:hint="Query/Message"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textSize="15sp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="italic" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/shape10"
                android:fontFamily="sans-serif-condensed"
                android:onClick="submit"
                android:text="send"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
</ScrollView>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
android:id="@+id/fab_one"
        android:transitionName="@string/fab12"
        android:layout_marginTop="170dp"

        android:layout_gravity="right">

        <android.support.design.widget.FloatingActionButton


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"

            android:transitionName="@string/fab1"
            ads:fabSize="normal"

            ads:rippleColor="@color/colorAccenta" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="16dp"
            android:foreground="#000"
            android:layout_gravity="center"
            android:transitionName="@string/fab2"
            android:src="@drawable/info"/>
    </FrameLayout>


</FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        ads:fabSize="normal"
        ads:rippleColor="@color/colorPrimary"
        android:layout_gravity="bottom|right"
        android:layout_margin="8dp"
        android:id="@+id/fab1"
        android:visibility="invisible"
        android:elevation="8dp"/>

</FrameLayout>
